# europa1400-tools

./: .gitignore  .releaserc  README.md  pyproject.toml
.github/workflows/: publish.yml  quality.yml  release.yml
europa1400_tools/: __main__.py  commands.py  const.py  helpers.py
europa1400_tools/cli/: base_options.py  command.py  common_options.py  convert_options.py  file_options.py
europa1400_tools/construct/: ageb.py  aobj.py  baf.py  base_construct.py  bgf.py  common.py  ed3.py  gfx.py  ogr.py  sbf.py  txs.py
europa1400_tools/converter/: ageb_converter.py  aobj_converter.py  base_converter.py  bgf_converter.py  bgf_gltf_converter.py  bgf_wavefront_converter.py  commands.py  common.py  ed3_converter.py  gfx_converter.py  ogr_converter.py  sbf_converter.py  txs_converter.py
europa1400_tools/decoder/: ageb_decoder.py  aobj_decoder.py  baf_decoder.py  base_decoder.py  bgf_decoder.py  commands.py  ed3_decoder.py  file_decoder.py  gfx_decoder.py  ogr_decoder.py  sbf_decoder.py  txs_decoder.py
europa1400_tools/extractor/: commands.py  file_extractor.py
europa1400_tools/models/: gilde_file.py  gilde_path.py  metadata.py  source_format.py  target_format.py
europa1400_tools/preprocessor/: animations_preprocessor.py  commands.py  objects_preprocessor.py
europa1400_tools/rich/: progress.py
europa_1400_tools/: __main__.py  animations_decoder.py  commands.py  common_options.py  const.py  helpers.py  models.py  models_decoder.py  rich.py
europa_1400_tools/cli/: command.py  common_options.py  convert_options.py
europa_1400_tools/construct/: ageb.py  aobj.py  baf.py  base_construct.py  bgf.py  common.py  ed3.py  gfx.py  ogr.py  sbf.py  txs.py
europa_1400_tools/converter/: ageb_converter.py  aobj_converter.py  base_converter.py  bgf_converter.py  bgf_gltf_converter.py  bgf_wavefront_converter.py  commands.py  common.py  ed3_converter.py  gfx_converter.py  graphic_converter.py  object_converter.py  object_gltf_converter.py  object_wavefront_converter.py  ogr_converter.py  sbf_converter.py  shapebank_converter.py  txs_converter.py
europa_1400_tools/decoder/: ageb_decoder.py  aobj_decoder.py  baf_decoder.py  base_decoder.py  bgf_decoder.py  commands.py  ed3_decoder.py  (+4 more)
imhex/: ageb.imhex  aobj.imhex  baf.imhex  bgf.imhex  ed3.imhex  form.imhex  gfx.imhex  ogr.imhex  res.imhex  sbf.imhex  txs.imhex
tests/: conftest.py  test_benchmark.py  test_extract.py  test_formats.py  test_gilde_file.py  test_gilde_path.py  test_options.py  test_sample.py
(+27 files in other folders)
